--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@heroicons/react": "^2.0.18",
     "appwrite": "^13.0.0",
+    "encoding": "^0.1.13",
     "next": "13.5.4",
     "react": "^18",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18",
     "zustand": "^4.4.3"
   },
